swagger has been refactored
